...
                                        <color key="backgroundColor" red="0.63423907759999998" green="0.66157263519999998" blue="0.73217785359999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="163" id="rKJ-6M-l2z"/>
                                            <constraint firstAttribute="height" constant="50" id="zHb-Av-frp"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
                                        <state key="normal" title="New Subject">
                                            <color key="titleColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="newSubjectAction:" destination="dbu-3x-1aW" eventType="touchUpInside" id="xRK-dW-hSL"/>
                                        </connections>
                                    </button>
...
                                                            <rect key="frame" x="16" y="8" width="256" height="50"/>
                                                            <color key="backgroundColor" red="0.7534174919128418" green="0.73358726501464844" blue="0.71666222810745239" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="50" id="Zgt-gd-XBQ"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
                                                            <state key="normal" title="Subject">
                                                                <color key="titleColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </state>
                                                            <connections>
                                                                <action selector="buttonAction:" destination="zpq-p5-VR6" eventType="touchUpInside" id="AyZ-BN-CT0"/>
                                                            </connections>
                                                        </button>
...
                                            <constraint firstAttribute="height" constant="50" id="2rh-1S-yC0"/>
                                        </constraints>
                                        <color key="textColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="32"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Card Front Title"/>
                                            <userDefinedRuntimeAttribute type="color" keyPath="borderDefaultColor">
                                                <color key="value" red="0.89792925119400024" green="0.89802247285842896" blue="0.90201383829116821" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="color" keyPath="borderHighlightColor">
                                                <color key="value" red="1" green="0.43529412150000002" blue="0.81176471709999998" alpha="1" colorSpace="calibratedRGB"/>
                                            </userDefinedRuntimeAttribute>
...
                                            <constraint firstAttribute="height" constant="50" id="KNY-tq-Xsm"/>
                                        </constraints>
                                        <color key="textColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="32"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Card Rear Title"/>
                                            <userDefinedRuntimeAttribute type="color" keyPath="placeHolderColor">
                                                <color key="value" red="0.33989286419999998" green="0.37534031270000001" blue="0.44183227419999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="color" keyPath="borderHighlightColor">
                                                <color key="value" red="1" green="0.43529412150000002" blue="0.81176471709999998" alpha="1" colorSpace="calibratedRGB"/>
                                            </userDefinedRuntimeAttribute>
...
